src/style.scss
@import "~bootstrap/scss/bootstrap";

$yellow-0: #fff7e5;

body {
  background: url(assets/Titles-Bckgnd.jpg) no-repeat center center;
}

section > h2 {
  color: #fff;
}

.title-front {
  background: linear-gradient(#6668, #bbb9);
  position: absolute;
}

.carousel-item {
  height: 50vw;
}
.carousel-caption {
  background: linear-gradient(#6668, #bbb9);
}

.pizza {
  color: #fff;
  max-height: 50vh;
  overflow: hidden;
  position: relative;
  text-align: center;

  .pizza-info {
    position: absolute;
    background: linear-gradient(#000b, #513a1d99);

    .p-info-details {
      border-radius: 30px;
      color: #705029;
      margin-left: auto;
      margin: 0 auto 1rem;
      text-align: initial;
      width: 175px;
    }
  }

  .pizza-img {
    filter: brightness(90%) contrast(140%);
    margin-top: -8%;
  }
}

@media (max-width: 576px) { // and down
  .pizza-img { margin-left: -150px; }
}

@media (min-width: 768px) { // and up
  .buñuelo-lg { margin-top: -388px; }

  .pizza-info {
    height: 100%;
    top: 0;
  }

  .p-i-imp { right: 0; }
}

@media (max-width: 767px) { // and down
  .buñuelo-lg { margin-top: -180px; }

  .p-i-div {
    max-height: 60vh;
    overflow: hidden;
    .pizza-img { margin-top: -140px; }
  }

  .pizza-info {
    bottom: 0;
    width: 100%;
  }
}

@media (min-width: 992px) { // and up
  .pizza-sp { width: 100%; }
}

// own default classes
.ml-- { margin: 0 -15px; }
.bg-yll-1 { background-color: $yellow-0; }
.ovr-hide { overflow: hidden; }
.flex-vert-cntr {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

